Adjust tags and css

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <body>
         <div id="content">
             <div id="main">
-                <p>Hello, I am <b>Rodrigo L. Balero</b></p>
+                <h1>Hello, I am <b>Rodrigo L. Balero</b></h1>
                 <p class="sub">Software engineer, Development manager, nerd.</p>
             </div>
             <div id="links">
                 <ul>
                     <li>resumé</li>
                     <li><a href="https://www.bugson.me" target="_blank">tech blog (pt_br)</a></li>
-                    <li><a href="https://twitter.com/rodrigobalero" target="_blank">twitter</a></li>
+                    <li><a href="https://twitter.com/rodrigobalero" target="_blank">twitter</a></li>    
                     <li><a href="https://www.linkedin.com/in/rodrigobalero" target="_blank">linkedin</a></li>
                     <li><a href="mailto:balero@bugson.me" target="_blank">contact</a></li>
 
